# rent4me

./: .gitignore  Makefile  manage.py  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/rentals/: handlers.py  schemas.py
core/apps/customers/: admin.py  apps.py
core/apps/customers/entities/: customers.py
core/apps/customers/exceptions/: customers.py
core/apps/customers/migrations/: 0001_initial.py
core/apps/customers/models/: __init__.py  customers.py
core/apps/customers/services/: customers.py
core/apps/rentals/: admin.py  apps.py
core/apps/rentals/entities/: rentals.py
core/apps/rentals/exceptions/: rentals.py
core/apps/rentals/migrations/: 0001_initial.py
core/apps/rentals/models/: __init__.py  rentals.py
core/apps/rentals/services/: rentals.py
core/config/: containers.py  wsgi.py
core/config/settings/: base.py
docker_compose/: app.yaml
tests/factories/: customers.py  rentals.py
tests/services/: conftest.py  test_customers.py  test_rentals.py
